--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,22 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
+/npm-debug.log*
+/yarn-error.log
+/yarn.lock
+/package-lock.json
 # production
-/build
+/dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.history
+#.editorconfig
+
+# ide
+.idea
 .vscode
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# umi
+.umi
+.umi-production
+.history
