--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^3.15.0",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "form-render": "^0.4.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "react": "^16.7.0",
